RESOLVED FIXED266758
[MSE][GStreamer] Fix releasing Stream and GstStream objects
https://bugs.webkit.org/show_bug.cgi?id=266758
Summary [MSE][GStreamer] Fix releasing Stream and GstStream objects
Olivier Blin
Reported 2023-12-21 03:03:03 PST
There is a circular reference between WebKitMediaSrcPadPrivate which owns a RefPtr<Stream>, and Stream which owns a GRefPtr<GstPad> const pad.
Attachments
Olivier Blin
Comment 1 2023-12-21 03:04:57 PST
EWS
Comment 2 2024-01-03 02:29:56 PST
Committed 272605@main (087cd6903b83): <https://commits.webkit.org/272605@main> Reviewed commits have been landed. Closing PR #22152 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-03 02:30:15 PST
Note You need to log in before you can comment on or make changes to this bug.